Add dotfiles and update readme

--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,13 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+
+# JetBrains Rider
+.idea/
+*.sln.iml
+
+# Generated files
+*_wpftmp.csproj
+
+# XamlStyler
+!XamlStyler/
