--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,5 +38,10 @@ jobs:
             .nuke/temp
             ~/.nuget/packages
           key: ${{ runner.os }}-${{ hashFiles('**/global.json', '**/*.csproj') }}
-      - name: Run './build.cmd Compile'
-        run: ./build.cmd Compile
+      - name: Run './build.cmd Compile Publish CompressArtifacts SignArtifacts'
+        run: ./build.cmd Compile Publish CompressArtifacts SignArtifacts
+        env:
+          AzureKeyVaultUrl: ${{ secrets.AZURE_KEY_VAULT_URL }}
+          AzureKeyVaultClientId: ${{ secrets.AZURE_KEY_VAULT_CLIENT_ID }}
+          AzureKeyVaultClientSecret: ${{ secrets.AZURE_KEY_VAULT_CLIENT_SECRET }}
+          AzureKeyVaultCertificate: ${{ secrets.AZURE_KEY_VAULT_CERTIFICATE }}
