--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,8 +38,8 @@ jobs:
             .nuke/temp
             ~/.nuget/packages
           key: ${{ runner.os }}-${{ hashFiles('**/global.json', '**/*.csproj') }}
-      - name: Run './build.cmd Compile Publish CompressArtifacts SignArtifacts'
-        run: ./build.cmd Compile Publish CompressArtifacts SignArtifacts
+      - name: Run './build.cmd Compile SignArtifacts'
+        run: ./build.cmd Compile SignArtifacts
         env:
           AzureKeyVaultUrl: ${{ secrets.AZURE_KEY_VAULT_URL }}
           AzureKeyVaultClientId: ${{ secrets.AZURE_KEY_VAULT_CLIENT_ID }}
