--- a/src/IconPacks.Browser/IconPacks.Browser.csproj
+++ b/src/IconPacks.Browser/IconPacks.Browser.csproj
@@ -19,17 +19,20 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="JetBrains.Annotations" Version="2022.1.0" />
+        <PackageReference Include="WpfAnalyzers" Version="4.1.1">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="MahApps.Metro.IconPacks" Version="4.11.0" />
         <PackageReference Include="MahApps.Metro" Version="2.4.9" />
-        <PackageReference Include="ControlzEx" Version="4.4.0" />
         <PackageReference Include="AsyncAwaitBestPractices" Version="6.0.5" />
         <PackageReference Include="Microsoft-WindowsAPICodePack-Shell" Version="1.1.4" />
         <PackageReference Include="VirtualizingWrapPanel" Version="1.5.7" />
-        <PackageReference Update="WpfAnalyzers" Version="4.0.2" />
     </ItemGroup>
     <ItemGroup Condition="$(DefineConstants.Contains(NETCOREAPP)) == true">
         <PackageReference Include="MaterialDesignThemes" Version="4.3.0" />
-        <PackageReference Include="MaterialDesignColors" Version="2.0.4" />
+        <PackageReference Include="MaterialDesignColors" Version="2.0.7" />
     </ItemGroup>
     <ItemGroup Condition="$(DefineConstants.Contains(NETCOREAPP)) == false">
         <PackageReference Include="MaterialDesignThemes" Version="3.0.1" />
