feat: update to latest changes for MahApps.IconPacks v5

--- a/NuGet.Config
+++ b/NuGet.Config
@@ -9,10 +9,19 @@
   </packageRestore>
   <packageSources>
     <clear />
+    <!-- <add key="CI.MahApps.IconPacks" value="d:\source\github_orgs\MahApps.Metro.IconPacks\Publish\" /> -->
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
   </packageSources>
   <activePackageSource>
     <clear />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
   </activePackageSource>
+  <packageSourceMapping>
+    <!-- <packageSource key="CI.MahApps.IconPacks">
+      <package pattern="*" />
+    </packageSource> -->
+    <packageSource key="nuget.org">
+      <package pattern="*" />
+    </packageSource>
+  </packageSourceMapping>
 </configuration>
