feat: update to latest changes and increase version

--- a/NuGet.Config
+++ b/NuGet.Config
@@ -10,6 +10,7 @@
   <packageSources>
     <clear />
     <!-- <add key="CI.MahApps.IconPacks" value="d:\source\github_orgs\MahApps.Metro.IconPacks\Publish\" /> -->
+    <add key="CI.MahApps.IconPacks" value="https://ci.appveyor.com/nuget/mahapps-metro-iconpacks-jrmm48owpkp2" />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
   </packageSources>
   <activePackageSource>
@@ -18,7 +19,7 @@
   </activePackageSource>
   <packageSourceMapping>
     <!-- <packageSource key="CI.MahApps.IconPacks">
-      <package pattern="*" />
+      <package pattern="MahApps.Metro.IconPacks*" />
     </packageSource> -->
     <packageSource key="nuget.org">
       <package pattern="*" />
