--- a/src/IconPacks.Browser/IconPacks.Browser.csproj
+++ b/src/IconPacks.Browser/IconPacks.Browser.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>net47;net6.0-windows</TargetFrameworks>
+        <TargetFrameworks>net8.0-windows;net6.0-windows;net47</TargetFrameworks>
         <OutputType>WinExe</OutputType>
         <UseWPF>true</UseWPF>
         <AssemblyName>IconPacks.Browser</AssemblyName>
@@ -24,7 +24,7 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="MahApps.Metro.IconPacks" Version="5.0.0-*" />
+        <PackageReference Include="MahApps.Metro.IconPacks" Version="5.0.0" />
         <PackageReference Include="MahApps.Metro" Version="2.4.10" />
         <PackageReference Include="AsyncAwaitBestPractices" Version="6.0.6" />
         <PackageReference Include="Microsoft-WindowsAPICodePack-Shell" Version="1.1.5" />
