--- a/src/IconPacks.Browser/IconPacks.Browser.csproj
+++ b/src/IconPacks.Browser/IconPacks.Browser.csproj
@@ -19,17 +19,15 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="JetBrains.Annotations" Version="2024.2.0" />
+        <PackageReference Include="JetBrains.Annotations" Version="2025.2.0" />
         <PackageReference Include="WpfAnalyzers" Version="4.1.1">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="MahApps.Metro.IconPacks" Version="5.0.0" />
-        <PackageReference Include="MahApps.Metro" Version="2.4.10" />
-        <PackageReference Include="MahApps.Metro" Version="3.0.0-alpha0492" />
+        <PackageReference Include="MahApps.Metro" Version="3.0.0-rc0516" />
         <PackageReference Include="AsyncAwaitBestPractices.MVVM" Version="8.0.0" />
         <PackageReference Include="Microsoft-WindowsAPICodePack-Shell" Version="1.1.5" />
-        <PackageReference Include="VirtualizingWrapPanel" Version="2.0.11" />
+        <PackageReference Include="VirtualizingWrapPanel" Version="2.3.1" />
 
         <PackageReference Include="MaterialDesignThemes" Version="3.0.1" Condition=" $(DefineConstants.Contains(NETCOREAPP)) == false " />
         <PackageReference Include="MaterialDesignColors" Version="1.2.7" Condition=" $(DefineConstants.Contains(NETCOREAPP)) == false " />
